parser.out
Created by PLY version 3.3 (http://www.dabeaz.com/ply)

Unused terminals:

    WHITESPACE

Grammar

Rule 0     S' -> Definitions
Rule 1     Definitions -> ExtendedAttributeList Definition Definitions
Rule 2     Definitions -> <empty>
Rule 3     Definition -> CallbackOrInterface
Rule 4     Definition -> PartialInterface
Rule 5     Definition -> Dictionary
Rule 6     Definition -> Exception
Rule 7     Definition -> Enum
Rule 8     Definition -> Typedef
Rule 9     Definition -> ImplementsStatement
Rule 10    CallbackOrInterface -> CALLBACK CallbackRestOrInterface
Rule 11    CallbackOrInterface -> Interface
Rule 12    CallbackRestOrInterface -> CallbackRest
Rule 13    CallbackRestOrInterface -> Interface
Rule 14    Interface -> INTERFACE IDENTIFIER Inheritance LBRACE InterfaceMembers RBRACE SEMICOLON
Rule 15    Interface -> INTERFACE IDENTIFIER SEMICOLON
Rule 16    PartialInterface -> PARTIAL INTERFACE IDENTIFIER LBRACE InterfaceMembers RBRACE SEMICOLON
Rule 17    Inheritance -> COLON ScopedName
Rule 18    Inheritance -> <empty>
Rule 19    InterfaceMembers -> ExtendedAttributeList InterfaceMember InterfaceMembers
Rule 20    InterfaceMembers -> <empty>
Rule 21    InterfaceMember -> Const
Rule 22    InterfaceMember -> AttributeOrOperation
Rule 23    Dictionary -> DICTIONARY IDENTIFIER Inheritance LBRACE DictionaryMembers RBRACE SEMICOLON
Rule 24    DictionaryMembers -> ExtendedAttributeList DictionaryMember DictionaryMembers
Rule 25    DictionaryMembers -> <empty>
Rule 26    DictionaryMember -> Required Type IDENTIFIER Default SEMICOLON
Rule 27    Default -> EQUALS DefaultValue
Rule 28    Default -> <empty>
Rule 29    DefaultValue -> ConstValue
Rule 30    DefaultValue -> LBRACKET RBRACKET
Rule 31    Exception -> EXCEPTION IDENTIFIER Inheritance LBRACE ExceptionMembers RBRACE SEMICOLON
Rule 32    Enum -> ENUM IDENTIFIER LBRACE EnumValueList RBRACE SEMICOLON
Rule 33    EnumValueList -> STRING EnumValueListComma
Rule 34    EnumValueListComma -> COMMA EnumValueListString
Rule 35    EnumValueListComma -> <empty>
Rule 36    EnumValueListString -> STRING EnumValueListComma
Rule 37    EnumValueListString -> <empty>
Rule 38    CallbackRest -> IDENTIFIER EQUALS ReturnType LPAREN ArgumentList RPAREN SEMICOLON
Rule 39    ExceptionMembers -> ExtendedAttributeList ExceptionMember ExceptionMembers
Rule 40    ExceptionMembers -> <empty>
Rule 41    Typedef -> TYPEDEF Type IDENTIFIER SEMICOLON
Rule 42    ImplementsStatement -> ScopedName IMPLEMENTS ScopedName SEMICOLON
Rule 43    Const -> CONST ConstType IDENTIFIER EQUALS ConstValue SEMICOLON
Rule 44    ConstValue -> BooleanLiteral
Rule 45    ConstValue -> INTEGER
Rule 46    ConstValue -> FLOATLITERAL
Rule 47    ConstValue -> STRING
Rule 48    ConstValue -> NULL
Rule 49    BooleanLiteral -> TRUE
Rule 50    BooleanLiteral -> FALSE
Rule 51    AttributeOrOperation -> Attribute
Rule 52    AttributeOrOperation -> Operation
Rule 53    Attribute -> Qualifier AttributeRest
Rule 54    Attribute -> Inherit AttributeRest
Rule 55    AttributeRest -> ReadOnly ATTRIBUTE Type AttributeName SEMICOLON
Rule 56    ReadOnly -> READONLY
Rule 57    ReadOnly -> <empty>
Rule 58    Inherit -> INHERIT
Rule 59    Inherit -> <empty>
Rule 60    Operation -> Qualifiers OperationRest
Rule 61    Operation -> STRINGIFIER SEMICOLON
Rule 62    Operation -> JSONIFIER SEMICOLON
Rule 63    Qualifier -> STATIC
Rule 64    Qualifier -> STRINGIFIER
Rule 65    Qualifiers -> Qualifier
Rule 66    Qualifiers -> Specials
Rule 67    Specials -> Special Specials
Rule 68    Specials -> <empty>
Rule 69    Special -> GETTER
Rule 70    Special -> SETTER
Rule 71    Special -> CREATOR
Rule 72    Special -> DELETER
Rule 73    Special -> LEGACYCALLER
Rule 74    OperationRest -> ReturnType OptionalIdentifier LPAREN ArgumentList RPAREN SEMICOLON
Rule 75    OptionalIdentifier -> IDENTIFIER
Rule 76    OptionalIdentifier -> <empty>
Rule 77    ArgumentList -> Argument Arguments
Rule 78    ArgumentList -> <empty>
Rule 79    Arguments -> COMMA Argument Arguments
Rule 80    Arguments -> <empty>
Rule 81    Argument -> ExtendedAttributeList Optional Type Ellipsis ArgumentName Default
Rule 82    ArgumentName -> IDENTIFIER
Rule 83    ArgumentName -> ATTRIBUTE
Rule 84    ArgumentName -> CALLBACK
Rule 85    ArgumentName -> CONST
Rule 86    ArgumentName -> CREATOR
Rule 87    ArgumentName -> DELETER
Rule 88    ArgumentName -> DICTIONARY
Rule 89    ArgumentName -> ENUM
Rule 90    ArgumentName -> EXCEPTION
Rule 91    ArgumentName -> GETTER
Rule 92    ArgumentName -> IMPLEMENTS
Rule 93    ArgumentName -> INHERIT
Rule 94    ArgumentName -> INTERFACE
Rule 95    ArgumentName -> LEGACYCALLER
Rule 96    ArgumentName -> PARTIAL
Rule 97    ArgumentName -> REQUIRED
Rule 98    ArgumentName -> SERIALIZER
Rule 99    ArgumentName -> SETTER
Rule 100   ArgumentName -> STATIC
Rule 101   ArgumentName -> STRINGIFIER
Rule 102   ArgumentName -> JSONIFIER
Rule 103   ArgumentName -> TYPEDEF
Rule 104   ArgumentName -> UNRESTRICTED
Rule 105   AttributeName -> IDENTIFIER
Rule 106   AttributeName -> REQUIRED
Rule 107   Optional -> OPTIONAL
Rule 108   Optional -> <empty>
Rule 109   Required -> REQUIRED
Rule 110   Required -> <empty>
Rule 111   Ellipsis -> ELLIPSIS
Rule 112   Ellipsis -> <empty>
Rule 113   ExceptionMember -> Const
Rule 114   ExceptionMember -> ExceptionField
Rule 115   ExceptionField -> Type IDENTIFIER SEMICOLON
Rule 116   ExtendedAttributeList -> LBRACKET ExtendedAttribute ExtendedAttributes RBRACKET
Rule 117   ExtendedAttributeList -> <empty>
Rule 118   ExtendedAttribute -> ExtendedAttributeNoArgs
Rule 119   ExtendedAttribute -> ExtendedAttributeArgList
Rule 120   ExtendedAttribute -> ExtendedAttributeIdent
Rule 121   ExtendedAttribute -> ExtendedAttributeNamedArgList
Rule 122   ExtendedAttribute -> ExtendedAttributeIdentList
Rule 123   ExtendedAttribute -> <empty>
Rule 124   ExtendedAttributes -> COMMA ExtendedAttribute ExtendedAttributes
Rule 125   ExtendedAttributes -> <empty>
Rule 126   Other -> INTEGER
Rule 127   Other -> FLOATLITERAL
Rule 128   Other -> IDENTIFIER
Rule 129   Other -> STRING
Rule 130   Other -> OTHER
Rule 131   Other -> ELLIPSIS
Rule 132   Other -> COLON
Rule 133   Other -> SCOPE
Rule 134   Other -> SEMICOLON
Rule 135   Other -> LT
Rule 136   Other -> EQUALS
Rule 137   Other -> GT
Rule 138   Other -> QUESTIONMARK
Rule 139   Other -> DATE
Rule 140   Other -> DOMSTRING
Rule 141   Other -> BYTESTRING
Rule 142   Other -> USVSTRING
Rule 143   Other -> ANY
Rule 144   Other -> ATTRIBUTE
Rule 145   Other -> BOOLEAN
Rule 146   Other -> BYTE
Rule 147   Other -> LEGACYCALLER
Rule 148   Other -> CONST
Rule 149   Other -> CREATOR
Rule 150   Other -> DELETER
Rule 151   Other -> DOUBLE
Rule 152   Other -> EXCEPTION
Rule 153   Other -> FALSE
Rule 154   Other -> FLOAT
Rule 155   Other -> GETTER
Rule 156   Other -> IMPLEMENTS
Rule 157   Other -> INHERIT
Rule 158   Other -> INTERFACE
Rule 159   Other -> LONG
Rule 160   Other -> MODULE
Rule 161   Other -> NULL
Rule 162   Other -> OBJECT
Rule 163   Other -> OCTET
Rule 164   Other -> OPTIONAL
Rule 165   Other -> SEQUENCE
Rule 166   Other -> MOZMAP
Rule 167   Other -> SETTER
Rule 168   Other -> SHORT
Rule 169   Other -> STATIC
Rule 170   Other -> STRINGIFIER
Rule 171   Other -> JSONIFIER
Rule 172   Other -> TRUE
Rule 173   Other -> TYPEDEF
Rule 174   Other -> UNSIGNED
Rule 175   Other -> VOID
Rule 176   OtherOrComma -> Other
Rule 177   OtherOrComma -> COMMA
Rule 178   Type -> SingleType
Rule 179   Type -> UnionType TypeSuffix
Rule 180   SingleType -> NonAnyType
Rule 181   SingleType -> ANY TypeSuffixStartingWithArray
Rule 182   UnionType -> LPAREN UnionMemberType OR UnionMemberType UnionMemberTypes RPAREN
Rule 183   UnionMemberType -> NonAnyType
Rule 184   UnionMemberTypeArrayOfAny -> ANY LBRACKET RBRACKET
Rule 185   UnionMemberType -> UnionType TypeSuffix
Rule 186   UnionMemberType -> UnionMemberTypeArrayOfAny TypeSuffix
Rule 187   UnionMemberTypes -> OR UnionMemberType UnionMemberTypes
Rule 188   UnionMemberTypes -> <empty>
Rule 189   NonAnyType -> PrimitiveOrStringType TypeSuffix
Rule 190   NonAnyType -> ARRAYBUFFER TypeSuffix
Rule 191   NonAnyType -> OBJECT TypeSuffix
Rule 192   NonAnyType -> SEQUENCE LT Type GT Null
Rule 193   NonAnyType -> PROMISE LT ReturnType GT Null
Rule 194   NonAnyType -> MOZMAP LT Type GT Null
Rule 195   NonAnyType -> ScopedName TypeSuffix
Rule 196   NonAnyType -> DATE TypeSuffix
Rule 197   ConstType -> PrimitiveOrStringType Null
Rule 198   ConstType -> IDENTIFIER Null
Rule 199   PrimitiveOrStringType -> UnsignedIntegerType
Rule 200   PrimitiveOrStringType -> BOOLEAN
Rule 201   PrimitiveOrStringType -> BYTE
Rule 202   PrimitiveOrStringType -> OCTET
Rule 203   PrimitiveOrStringType -> FLOAT
Rule 204   PrimitiveOrStringType -> UNRESTRICTED FLOAT
Rule 205   PrimitiveOrStringType -> DOUBLE
Rule 206   PrimitiveOrStringType -> UNRESTRICTED DOUBLE
Rule 207   PrimitiveOrStringType -> DOMSTRING
Rule 208   PrimitiveOrStringType -> BYTESTRING
Rule 209   PrimitiveOrStringType -> USVSTRING
Rule 210   UnsignedIntegerType -> UNSIGNED IntegerType
Rule 211   UnsignedIntegerType -> IntegerType
Rule 212   IntegerType -> SHORT
Rule 213   IntegerType -> LONG OptionalLong
Rule 214   OptionalLong -> LONG
Rule 215   OptionalLong -> <empty>
Rule 216   TypeSuffix -> LBRACKET RBRACKET TypeSuffix
Rule 217   TypeSuffix -> QUESTIONMARK TypeSuffixStartingWithArray
Rule 218   TypeSuffix -> <empty>
Rule 219   TypeSuffixStartingWithArray -> LBRACKET RBRACKET TypeSuffix
Rule 220   TypeSuffixStartingWithArray -> <empty>
Rule 221   Null -> QUESTIONMARK
Rule 222   Null -> <empty>
Rule 223   ReturnType -> Type
Rule 224   ReturnType -> VOID
Rule 225   ScopedName -> AbsoluteScopedName
Rule 226   ScopedName -> RelativeScopedName
Rule 227   AbsoluteScopedName -> SCOPE IDENTIFIER ScopedNameParts
Rule 228   RelativeScopedName -> IDENTIFIER ScopedNameParts
Rule 229   ScopedNameParts -> SCOPE IDENTIFIER ScopedNameParts
Rule 230   ScopedNameParts -> <empty>
Rule 231   ExtendedAttributeNoArgs -> IDENTIFIER
Rule 232   ExtendedAttributeArgList -> IDENTIFIER LPAREN ArgumentList RPAREN
Rule 233   ExtendedAttributeIdent -> IDENTIFIER EQUALS STRING
Rule 234   ExtendedAttributeIdent -> IDENTIFIER EQUALS IDENTIFIER
Rule 235   ExtendedAttributeNamedArgList -> IDENTIFIER EQUALS IDENTIFIER LPAREN ArgumentList RPAREN
Rule 236   ExtendedAttributeIdentList -> IDENTIFIER EQUALS LPAREN IdentifierList RPAREN
Rule 237   IdentifierList -> IDENTIFIER Identifiers
Rule 238   Identifiers -> COMMA IDENTIFIER Identifiers
Rule 239   Identifiers -> <empty>

Terminals, with rules where they appear

ANY                  : 143 181 184
ARRAYBUFFER          : 190
ATTRIBUTE            : 55 83 144
BOOLEAN              : 145 200
BYTE                 : 146 201
BYTESTRING           : 141 208
CALLBACK             : 10 84
COLON                : 17 132
COMMA                : 34 79 124 177 238
CONST                : 43 85 148
CREATOR              : 71 86 149
DATE                 : 139 196
DELETER              : 72 87 150
DICTIONARY           : 23 88
DOMSTRING            : 140 207
DOUBLE               : 151 205 206
ELLIPSIS             : 111 131
ENUM                 : 32 89
EQUALS               : 27 38 43 136 233 234 235 236
EXCEPTION            : 31 90 152
FALSE                : 50 153
FLOAT                : 154 203 204
FLOATLITERAL         : 46 127
GETTER               : 69 91 155
GT                   : 137 192 193 194
IDENTIFIER           : 14 15 16 23 26 31 32 38 41 43 75 82 105 115 128 198 227 228 229 231 232 233 234 234 235 235 236 237 238
IMPLEMENTS           : 42 92 156
INHERIT              : 58 93 157
INTEGER              : 45 126
INTERFACE            : 14 15 16 94 158
JSONIFIER            : 62 102 171
LBRACE               : 14 16 23 31 32
LBRACKET             : 30 116 184 216 219
LEGACYCALLER         : 73 95 147
LONG                 : 159 213 214
LPAREN               : 38 74 182 232 235 236
LT                   : 135 192 193 194
MODULE               : 160
MOZMAP               : 166 194
NULL                 : 48 161
OBJECT               : 162 191
OCTET                : 163 202
OPTIONAL             : 107 164
OR                   : 182 187
OTHER                : 130
PARTIAL              : 16 96
PROMISE              : 193
QUESTIONMARK         : 138 217 221
RBRACE               : 14 16 23 31 32
RBRACKET             : 30 116 184 216 219
READONLY             : 56
REQUIRED             : 97 106 109
RPAREN               : 38 74 182 232 235 236
SCOPE                : 133 227 229
SEMICOLON            : 14 15 16 23 26 31 32 38 41 42 43 55 61 62 74 115 134
SEQUENCE             : 165 192
SERIALIZER           : 98
SETTER               : 70 99 167
SHORT                : 168 212
STATIC               : 63 100 169
STRING               : 33 36 47 129 233
STRINGIFIER          : 61 64 101 170
TRUE                 : 49 172
TYPEDEF              : 41 103 173
UNRESTRICTED         : 104 204 206
UNSIGNED             : 174 210
USVSTRING            : 142 209
VOID                 : 175 224
WHITESPACE           : 
error                : 

Nonterminals, with rules where they appear

AbsoluteScopedName   : 225
Argument             : 77 79
ArgumentList         : 38 74 232 235
ArgumentName         : 81
Arguments            : 77 79
Attribute            : 51
AttributeName        : 55
AttributeOrOperation : 22
AttributeRest        : 53 54
BooleanLiteral       : 44
CallbackOrInterface  : 3
CallbackRest         : 12
CallbackRestOrInterface : 10
Const                : 21 113
ConstType            : 43
ConstValue           : 29 43
Default              : 26 81
DefaultValue         : 27
Definition           : 1
Definitions          : 1 0
Dictionary           : 5
DictionaryMember     : 24
DictionaryMembers    : 23 24
Ellipsis             : 81
Enum                 : 7
EnumValueList        : 32
EnumValueListComma   : 33 36
EnumValueListString  : 34
Exception            : 6
ExceptionField       : 114
ExceptionMember      : 39
ExceptionMembers     : 31 39
ExtendedAttribute    : 116 124
ExtendedAttributeArgList : 119
ExtendedAttributeIdent : 120
ExtendedAttributeIdentList : 122
ExtendedAttributeList : 1 19 24 39 81
ExtendedAttributeNamedArgList : 121
ExtendedAttributeNoArgs : 118
ExtendedAttributes   : 116 124
IdentifierList       : 236
Identifiers          : 237 238
ImplementsStatement  : 9
Inherit              : 54
Inheritance          : 14 23 31
IntegerType          : 210 211
Interface            : 11 13
InterfaceMember      : 19
InterfaceMembers     : 14 16 19
NonAnyType           : 180 183
Null                 : 192 193 194 197 198
Operation            : 52
OperationRest        : 60
Optional             : 81
OptionalIdentifier   : 74
OptionalLong         : 213
Other                : 176
OtherOrComma         : 
PartialInterface     : 4
PrimitiveOrStringType : 189 197
Qualifier            : 53 65
Qualifiers           : 60
ReadOnly             : 55
RelativeScopedName   : 226
Required             : 26
ReturnType           : 38 74 193
ScopedName           : 17 42 42 195
ScopedNameParts      : 227 228 229
SingleType           : 178
Special              : 67
Specials             : 66 67
Type                 : 26 41 55 81 115 192 194 223
TypeSuffix           : 179 185 186 189 190 191 195 196 216 219
TypeSuffixStartingWithArray : 181 217
Typedef              : 8
UnionMemberType      : 182 182 187
UnionMemberTypeArrayOfAny : 186
UnionMemberTypes     : 182 187
UnionType            : 179 185
UnsignedIntegerType  : 199

Parsing method: LALR

state 0

    (0) S' -> . Definitions
    (1) Definitions -> . ExtendedAttributeList Definition Definitions
    (2) Definitions -> .
    (116) ExtendedAttributeList -> . LBRACKET ExtendedAttribute ExtendedAttributes RBRACKET
    (117) ExtendedAttributeList -> .

    $end            reduce using rule 2 (Definitions -> .)
    LBRACKET        shift and go to state 1
    CALLBACK        reduce using rule 117 (ExtendedAttributeList -> .)
    PARTIAL         reduce using rule 117 (ExtendedAttributeList -> .)
    DICTIONARY      reduce using rule 117 (ExtendedAttributeList -> .)
    EXCEPTION       reduce using rule 117 (ExtendedAttributeList -> .)
    ENUM            reduce using rule 117 (ExtendedAttributeList -> .)
    TYPEDEF         reduce using rule 117 (ExtendedAttributeList -> .)
    INTERFACE       reduce using rule 117 (ExtendedAttributeList -> .)
    SCOPE           reduce using rule 117 (ExtendedAttributeList -> .)
    IDENTIFIER      reduce using rule 117 (ExtendedAttributeList -> .)

    Definitions                    shift and go to state 3
    ExtendedAttributeList          shift and go to state 2

state 1

    (116) ExtendedAttributeList -> LBRACKET . ExtendedAttribute ExtendedAttributes RBRACKET
    (118) ExtendedAttribute -> . ExtendedAttributeNoArgs
    (119) ExtendedAttribute -> . ExtendedAttributeArgList
    (120) ExtendedAttribute -> . ExtendedAttributeIdent
    (121) ExtendedAttribute -> . ExtendedAttributeNamedArgList
    (122) ExtendedAttribute -> . ExtendedAttributeIdentList
    (123) ExtendedAttribute -> .
    (231) ExtendedAttributeNoArgs -> . IDENTIFIER
    (232) ExtendedAttributeArgList -> . IDENTIFIER LPAREN ArgumentList RPAREN
    (233) ExtendedAttributeIdent -> . IDENTIFIER EQUALS STRING
    (234) ExtendedAttributeIdent -> . IDENTIFIER EQUALS IDENTIFIER
    (235) ExtendedAttributeNamedArgList -> . IDENTIFIER EQUALS IDENTIFIER LPAREN ArgumentList RPAREN
    (236) ExtendedAttributeIdentList -> . IDENTIFIER EQUALS LPAREN IdentifierList RPAREN

    COMMA           reduce using rule 123 (ExtendedAttribute -> .)
    RBRACKET        reduce using rule 123 (ExtendedAttribute -> .)
    IDENTIFIER      shift and go to state 10

    ExtendedAttribute              shift and go to state 4
    ExtendedAttributeNamedArgList  shift and go to state 5
    ExtendedAttributeArgList       shift and go to state 6
    ExtendedAttributeIdentList     shift and go to state 7
    ExtendedAttributeIdent         shift and go to state 8
    ExtendedAttributeNoArgs        shift and go to state 9

state 2

    (1) Definitions -> ExtendedAttributeList . Definition Definitions
    (3) Definition -> . CallbackOrInterface
    (4) Definition -> . PartialInterface
    (5) Definition -> . Dictionary
    (6) Definition -> . Exception
    (7) Definition -> . Enum
    (8) Definition -> . Typedef
    (9) Definition -> . ImplementsStatement
    (10) CallbackOrInterface -> . CALLBACK CallbackRestOrInterface
    (11) CallbackOrInterface -> . Interface
    (16) PartialInterface -> . PARTIAL INTERFACE IDENTIFIER LBRACE InterfaceMembers RBRACE SEMICOLON
    (23) Dictionary -> . DICTIONARY IDENTIFIER Inheritance LBRACE DictionaryMembers RBRACE SEMICOLON
    (31) Exception -> . EXCEPTION IDENTIFIER Inheritance LBRACE ExceptionMembers RBRACE SEMICOLON
    (32) Enum -> . ENUM IDENTIFIER LBRACE EnumValueList RBRACE SEMICOLON
    (41) Typedef -> . TYPEDEF Type IDENTIFIER SEMICOLON
    (42) ImplementsStatement -> . ScopedName IMPLEMENTS ScopedName SEMICOLON
    (14) Interface -> . INTERFACE IDENTIFIER Inheritance LBRACE InterfaceMembers RBRACE SEMICOLON
    (15) Interface -> . INTERFACE IDENTIFIER SEMICOLON
    (225) ScopedName -> . AbsoluteScopedName
    (226) ScopedName -> . RelativeScopedName
    (227) AbsoluteScopedName -> . SCOPE IDENTIFIER ScopedNameParts
    (228) RelativeScopedName -> . IDENTIFIER ScopedNameParts

    CALLBACK        shift and go to state 29
    PARTIAL         shift and go to state 27
    DICTIONARY      shift and go to state 21
    EXCEPTION       shift and go to state 23
    ENUM            shift and go to state 22
    TYPEDEF         shift and go to state 26
    INTERFACE       shift and go to state 30
    SCOPE           shift and go to state 13
    IDENTIFIER      shift and go to state 18

    Typedef                        shift and go to state 11
    CallbackOrInterface            shift and go to state 12
    Dictionary                     shift and go to state 14
    AbsoluteScopedName             shift and go to state 15
    Enum                           shift and go to state 16
    Interface                      shift and go to state 17
    Definition                     shift and go to state 19
    Exception                      shift and go to state 20
    PartialInterface               shift and go to state 24
    ImplementsStatement            shift and go to state 25
    RelativeScopedName             shift and go to state 28
    ScopedName                     shift and go to state 31

state 3

    (0) S' -> Definitions .



state 4

    (116) ExtendedAttributeList -> LBRACKET ExtendedAttribute . ExtendedAttributes RBRACKET
    (124) ExtendedAttributes -> . COMMA ExtendedAttribute ExtendedAttributes
    (125) ExtendedAttributes -> .

    COMMA           shift and go to state 33
    RBRACKET        reduce using rule 125 (ExtendedAttributes -> .)

    ExtendedAttributes             shift and go to state 32

state 5

    (121) ExtendedAttribute -> ExtendedAttributeNamedArgList .

    COMMA           reduce using rule 121 (ExtendedAttribute -> ExtendedAttributeNamedArgList .)
    RBRACKET        reduce using rule 121 (ExtendedAttribute -> ExtendedAttributeNamedArgList .)


state 6

    (119) ExtendedAttribute -> ExtendedAttributeArgList .

    COMMA           reduce using rule 119 (ExtendedAttribute -> ExtendedAttributeArgList .)
    RBRACKET        reduce using rule 119 (ExtendedAttribute -> ExtendedAttributeArgList .)


state 7

    (122) ExtendedAttribute -> ExtendedAttributeIdentList .

    COMMA           reduce using rule 122 (ExtendedAttribute -> ExtendedAttributeIdentList .)
    RBRACKET        reduce using rule 122 (ExtendedAttribute -> ExtendedAttributeIdentList .)


state 8

    (120) ExtendedAttribute -> ExtendedAttributeIdent .

    COMMA           reduce using rule 120 (ExtendedAttribute -> ExtendedAttributeIdent .)
    RBRACKET        reduce using rule 120 (ExtendedAttribute -> ExtendedAttributeIdent .)


state 9

    (118) ExtendedAttribute -> ExtendedAttributeNoArgs .

    COMMA           reduce using rule 118 (ExtendedAttribute -> ExtendedAttributeNoArgs .)
    RBRACKET        reduce using rule 118 (ExtendedAttribute -> ExtendedAttributeNoArgs .)


state 10

    (231) ExtendedAttributeNoArgs -> IDENTIFIER .
    (232) ExtendedAttributeArgList -> IDENTIFIER . LPAREN ArgumentList RPAREN
    (233) ExtendedAttributeIdent -> IDENTIFIER . EQUALS STRING
    (234) ExtendedAttributeIdent -> IDENTIFIER . EQUALS IDENTIFIER
    (235) ExtendedAttributeNamedArgList -> IDENTIFIER . EQUALS IDENTIFIER LPAREN ArgumentList RPAREN
    (236) ExtendedAttributeIdentList -> IDENTIFIER . EQUALS LPAREN IdentifierList RPAREN

    COMMA           reduce using rule 231 (ExtendedAttributeNoArgs -> IDENTIFIER .)
    RBRACKET        reduce using rule 231 (ExtendedAttributeNoArgs -> IDENTIFIER .)
    LPAREN          shift and go to state 35
    EQUALS          shift and go to state 34


state 11

    (8) Definition -> Typedef .

    LBRACKET        reduce using rule 8 (Definition -> Typedef .)
    CALLBACK        reduce using rule 8 (Definition -> Typedef .)
    PARTIAL         reduce using rule 8 (Definition -> Typedef .)
    DICTIONARY      reduce using rule 8 (Definition -> Typedef .)
    EXCEPTION       reduce using rule 8 (Definition -> Typedef .)
    ENUM            reduce using rule 8 (Definition -> Typedef .)
    TYPEDEF         reduce using rule 8 (Definition -> Typedef .)
    INTERFACE       reduce using rule 8 (Definition -> Typedef .)
    SCOPE           reduce using rule 8 (Definition -> Typedef .)
    IDENTIFIER      reduce using rule 8 (Definition -> Typedef .)
    $end            reduce using rule 8 (Definition -> Typedef .)


state 12

    (3) Definition -> CallbackOrInterface .

    LBRACKET        reduce using rule 3 (Definition -> CallbackOrInterface .)
    CALLBACK        reduce using rule 3 (Definition -> CallbackOrInterface .)
    PARTIAL         reduce using rule 3 (Definition -> CallbackOrInterface .)
    DICTIONARY      reduce using rule 3 (Definition -> CallbackOrInterface .)
    EXCEPTION       reduce using rule 3 (Definition -> CallbackOrInterface .)
    ENUM            reduce using rule 3 (Definition -> CallbackOrInterface .)
    TYPEDEF         reduce using rule 3 (Definition -> CallbackOrInterface .)
    INTERFACE       reduce using rule 3 (Definition -> CallbackOrInterface .)
    SCOPE           reduce using rule 3 (Definition -> CallbackOrInterface .)
    IDENTIFIER      reduce using rule 3 (Definition -> CallbackOrInterface .)
    $end            reduce using rule 3 (Definition -> CallbackOrInterface .)


state 13

    (227) AbsoluteScopedName -> SCOPE . IDENTIFIER ScopedNameParts

    IDENTIFIER      shift and go to state 36


state 14

    (5) Definition -> Dictionary .

    LBRACKET        reduce using rule 5 (Definition -> Dictionary .)
    CALLBACK        reduce using rule 5 (Definition -> Dictionary .)
    PARTIAL         reduce using rule 5 (Definition -> Dictionary .)
    DICTIONARY      reduce using rule 5 (Definition -> Dictionary .)
    EXCEPTION       reduce using rule 5 (Definition -> Dictionary .)
    ENUM            reduce using rule 5 (Definition -> Dictionary .)
    TYPEDEF         reduce using rule 5 (Definition -> Dictionary .)
    INTERFACE       reduce using rule 5 (Definition -> Dictionary .)
    SCOPE           reduce using rule 5 (Definition -> Dictionary .)
    IDENTIFIER      reduce using rule 5 (Definition -> Dictionary .)
    $end            reduce using rule 5 (Definition -> Dictionary .)


state 15

    (225) ScopedName -> AbsoluteScopedName .

    LBRACKET        reduce using rule 225 (ScopedName -> AbsoluteScopedName .)
    QUESTIONMARK    reduce using rule 225 (ScopedName -> AbsoluteScopedName .)
    IDENTIFIER      reduce using rule 225 (ScopedName -> AbsoluteScopedName .)
    LPAREN          reduce using rule 225 (ScopedName -> AbsoluteScopedName .)
    ELLIPSIS        reduce using rule 225 (ScopedName -> AbsoluteScopedName .)
    ATTRIBUTE       reduce using rule 225 (ScopedName -> AbsoluteScopedName .)
    CALLBACK        reduce using rule 225 (ScopedName -> AbsoluteScopedName .)
    CONST           reduce using rule 225 (ScopedName -> AbsoluteScopedName .)
    CREATOR         reduce using rule 225 (ScopedName -> AbsoluteScopedName .)
    DELETER         reduce using rule 225 (ScopedName -> AbsoluteScopedName .)
    DICTIONARY      reduce using rule 225 (ScopedName -> AbsoluteScopedName .)
    ENUM            reduce using rule 225 (ScopedName -> AbsoluteScopedName .)
    EXCEPTION       reduce using rule 225 (ScopedName -> AbsoluteScopedName .)
    GETTER          reduce using rule 225 (ScopedName -> AbsoluteScopedName .)
    IMPLEMENTS      reduce using rule 225 (ScopedName -> AbsoluteScopedName .)
    INHERIT         reduce using rule 225 (ScopedName -> AbsoluteScopedName .)
    INTERFACE       reduce using rule 225 (ScopedName -> AbsoluteScopedName .)
    LEGACYCALLER    reduce using rule 225 (ScopedName -> AbsoluteScopedName .)
    PARTIAL         reduce using rule 225 (ScopedName -> AbsoluteScopedName .)
    REQUIRED        reduce using rule 225 (ScopedName -> AbsoluteScopedName .)
    SERIALIZER      reduce using rule 225 (ScopedName -> AbsoluteScopedName .)
    SETTER          reduce using rule 225 (ScopedName -> AbsoluteScopedName .)
    STATIC          reduce using rule 225 (ScopedName -> AbsoluteScopedName .)
    STRINGIFIER     reduce using rule 225 (ScopedName -> AbsoluteScopedName .)
    JSONIFIER       reduce using rule 225 (ScopedName -> AbsoluteScopedName .)
    TYPEDEF         reduce using rule 225 (ScopedName -> AbsoluteScopedName .)
    UNRESTRICTED    reduce using rule 225 (ScopedName -> AbsoluteScopedName .)
    OR              reduce using rule 225 (ScopedName -> AbsoluteScopedName .)
    LBRACE          reduce using rule 225 (ScopedName -> AbsoluteScopedName .)
    GT              reduce using rule 225 (ScopedName -> AbsoluteScopedName .)
    RPAREN          reduce using rule 225 (ScopedName -> AbsoluteScopedName .)
    SEMICOLON       reduce using rule 225 (ScopedName -> AbsoluteScopedName .)


state 16

    (7) Definition -> Enum .

    LBRACKET        reduce using rule 7 (Definition -> Enum .)
    CALLBACK        reduce using rule 7 (Definition -> Enum .)
    PARTIAL         reduce using rule 7 (Definition -> Enum .)
    DICTIONARY      reduce using rule 7 (Definition -> Enum .)
    EXCEPTION       reduce using rule 7 (Definition -> Enum .)
    ENUM            reduce using rule 7 (Definition -> Enum .)
    TYPEDEF         reduce using rule 7 (Definition -> Enum .)
    INTERFACE       reduce using rule 7 (Definition -> Enum .)
    SCOPE           reduce using rule 7 (Definition -> Enum .)
    IDENTIFIER      reduce using rule 7 (Definition -> Enum .)
    $end            reduce using rule 7 (Definition -> Enum .)


state 17

    (11) CallbackOrInterface -> Interface .

    LBRACKET        reduce using rule 11 (CallbackOrInterface -> Interface .)
    CALLBACK        reduce using rule 11 (CallbackOrInterface -> Interface .)
    PARTIAL         reduce using rule 11 (CallbackOrInterface -> Interface .)
    DICTIONARY      reduce using rule 11 (CallbackOrInterface -> Interface .)
    EXCEPTION       reduce using rule 11 (CallbackOrInterface -> Interface .)
    ENUM            reduce using rule 11 (CallbackOrInterface -> Interface .)
    TYPEDEF         reduce using rule 11 (CallbackOrInterface -> Interface .)
    INTERFACE       reduce using rule 11 (CallbackOrInterface -> Interface .)
    SCOPE           reduce using rule 11 (CallbackOrInterface -> Interface .)
    IDENTIFIER      reduce using rule 11 (CallbackOrInterface -> Interface .)
    $end            reduce using rule 11 (CallbackOrInterface -> Interface .)


state 18

    (228) RelativeScopedName -> IDENTIFIER . ScopedNameParts
    (229) ScopedNameParts -> . SCOPE IDENTIFIER ScopedNameParts
    (230) ScopedNameParts -> .
